<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plantNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plantNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plantSunlightLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/sunlight_amount"
        app:layout_constraintTop_toBottomOf="@id/plantNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plantSunLightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_full_partial" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plantColorLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/color_name"
        app:layout_constraintTop_toBottomOf="@id/plantSunlightLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plantColorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plantTypeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/type"
        app:layout_constraintTop_toBottomOf="@id/plantColorLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plantTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plantPartitionLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/partition_ex_store_42_store_78_etc"
        app:layout_constraintTop_toBottomOf="@id/plantTypeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plantPartitionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_store_42_store_78_etc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/insertManySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/insert_multiple_entries"
        app:layout_constraintBottom_toTopOf="@+id/addDoc"
        app:layout_constraintStart_toStartOf="parent"
        app:switchPadding="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/uploadDoc"
        tools:text="Insert Item" />
</androidx.constraintlayout.widget.ConstraintLayout>